--- a/week16/day2/daily/handlechange/src/App.css
+++ b/week16/day2/daily/handlechange/src/App.css
@@ -1,27 +1,38 @@
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 50px;
+  
 }
 
-h2 {
-  color: #7a0a0a;
+.block1{
+  background-color: #e6dddd;
+  border: 2px solid black;
+  border-radius: 10px;
+  width: 300px;
 }
+.block2{
+  background-color: rgb(130, 241, 241);
+  border: 2px solid black;
+  border-radius: 10px;
+  width: 300px;
+}
+
 
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  /* margin-top: 10px; */
 }
 
 .input {
   padding: 8px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   width: 200px;
 }
 
@@ -30,8 +41,8 @@ h2 {
 }
 
 .select {
-  padding: 8px;
-  margin-bottom: 10px;
+  padding: 5px;
+  /* margin-bottom: 2px; */
   width: 200px;
 }
 
@@ -50,7 +61,7 @@ h2 {
 ul {
   list-style-type: none;
   padding: 0;
-  margin-top: 10px;
+  margin-top: 5px;
   text-align: left;
 }
 
@@ -63,13 +74,13 @@ li {
 .container {
   background-color: #f5f5f5;
   border-radius: 8px;
-  padding: 20px;
+  padding: 10px;
 }
 
 h2 {
   color: #333;
-  font-size: 24px;
-  margin-bottom: 10px;
+  /* font-size: 24px; */
+  /* margin-bottom: 10px; */
 }
 
 p {
@@ -80,14 +91,14 @@ p {
   font-weight: bold;
 }
 
-.age,
+/* .age,
 .gender,
 .destination {
   margin-bottom: 5px;
-}
+} */
 
 .dietary {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   font-weight: bold;
 }
 
@@ -96,7 +107,7 @@ p {
 }
 
 .submit {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 /* Agrega más estilos personalizados según sea necesario */
